--- a/TaskManager.WebServer/Views/Shared/_Layout.cshtml
+++ b/TaskManager.WebServer/Views/Shared/_Layout.cshtml
@@ -37,6 +37,9 @@
         </footer>
     </div>
 
+    @Scripts.Render("~/bundles/jqueryui")
+    @Styles.Render("~/Content/themes/base/css")
+
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
